; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_eeprom.c_send_ack.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_eeprom.c_send_ack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipath_devdata = type { i32 }

@i2c_line_low = common dso_local global i32 0, align 4
@i2c_line_high = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ipath_devdata*)* @send_ack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_ack(%struct.ipath_devdata* %0) #0 {
  %2 = alloca %struct.ipath_devdata*, align 8
  store %struct.ipath_devdata* %0, %struct.ipath_devdata** %2, align 8
  %3 = load %struct.ipath_devdata*, %struct.ipath_devdata** %2, align 8
  %4 = load i32, i32* @i2c_line_low, align 4
  %5 = call i32 @sda_out(%struct.ipath_devdata* %3, i32 %4)
  %6 = load %struct.ipath_devdata*, %struct.ipath_devdata** %2, align 8
  %7 = load i32, i32* @i2c_line_high, align 4
  %8 = call i32 @scl_out(%struct.ipath_devdata* %6, i32 %7)
  %9 = load %struct.ipath_devdata*, %struct.ipath_devdata** %2, align 8
  %10 = load i32, i32* @i2c_line_low, align 4
  %11 = call i32 @scl_out(%struct.ipath_devdata* %9, i32 %10)
  %12 = load %struct.ipath_devdata*, %struct.ipath_devdata** %2, align 8
  %13 = load i32, i32* @i2c_line_high, align 4
  %14 = call i32 @sda_out(%struct.ipath_devdata* %12, i32 %13)
  ret void
}

declare dso_local i32 @sda_out(%struct.ipath_devdata*, i32) #1

declare dso_local i32 @scl_out(%struct.ipath_devdata*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
